test rebuild